--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "transfer-station",
+  "name": "shizhe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.12.3",
+    "axios": "^0.21.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.5",
+    "react-infinite-scroller": "^1.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass-loader": "^11.0.1",
+    "scss-loader": "0.0.1",
+    "store": "^2.0.12",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
