--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "shizhe",
   "version": "0.1.0",
+  "main": "build/index.js",
+  "module": "build/index.js",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
