--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.3.1",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "eslint-plugin-vue": "^7.9.0",
+    "highlight.js": "^10.7.2",
+    "prismjs": "^1.23.0",
     "vue": "^3.0.5",
     "vue-router": "4.0.0-beta.13"
   },
