--- a/package.json
+++ b/package.json
@@ -1,23 +1,52 @@
 {
   "name": "deepblog",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "dev": "node server",
+    "build": "yarn build:client && yarn build:server",
+    "build:client": "vite build --ssrManifest --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
+    "generate": "vite build --ssrManifest --outDir dist/static && yarn build:server && node prerender",
+    "serve": "cross-env NODE_ENV=production node server",
+    "debug": "node --inspect-brk server"
   },
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.1",
     "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/server-renderer": "^3.0.11",
+    "blueimp-md5": "^2.18.0",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "eslint-plugin-vue": "^7.9.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "highlight.js": "^10.7.2",
+    "http-errors": "~1.6.3",
+    "http-server": "^0.12.3",
+    "jade": "~1.11.0",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.16",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "prismjs": "^1.23.0",
+    "sass": "^1.34.0",
+    "scss": "^0.2.4",
     "vue": "^3.0.5",
-    "vue-router": "4.0.0-beta.13"
+    "vue-router": "^4.0.0-beta.13",
+    "vue-style-loader": "^4.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/server-renderer": "^3.0.11",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "dep-import-type": "link:./dep-import-type",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "typescript": "^4.1.3",
     "vite": "^2.3.3",
     "vue-tsc": "^0.0.24"
