--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
     "vuepress": "^1.8.2"
   },
   "dependencies": {
     "algoliasearch": "^4.9.2",
     "instantsearch.js": "^4.23.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
+    "marked": "^2.0.7",
     "vuepress": "^1.8.2"
   },
   "scripts": {
