--- a/theme-deeply/package.json
+++ b/theme-deeply/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "deep",
+  "name": "vuepress-theme-deeply",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "devDependencies": {
-    "vuepress": "^1.8.2",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
-  },
-  "dependencies": {
-    "vuepress": "^1.8.2",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
-  },
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "deploy": "./deploy.sh"
+  },
+  "devDependencies": {
+    "vuepress": "^1.8.2"
+  },
+  "dependencies": {
+    "@vssue/api-github-v3": "^1.4.7",
+    "@vssue/vuepress-plugin-vssue": "^1.4.8",
+    "algoliasearch": "^4.9.2",
+    "instantsearch.js": "^4.23.0",
+    "vuepress": "^1.8.2"
   }
 }
