--- a/theme-deeply/package.json
+++ b/theme-deeply/package.json
@@ -16,6 +16,7 @@
     "@vssue/vuepress-plugin-vssue": "^1.4.8",
     "algoliasearch": "^4.9.2",
     "instantsearch.js": "^4.23.0",
-    "vuepress": "^1.8.2"
+    "vuepress": "^1.8.2",
+    "json2yaml": "^1.1.0"
   }
 }
