--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vssue/api-github-v3": "^1.4.7",
     "@vssue/vuepress-plugin-vssue": "^1.4.8",
     "algoliasearch": "^4.9.2",
+    "axios": "^0.21.1",
     "chalk": "^4.0.0",
     "instantsearch.js": "^4.23.0",
     "json2yaml": "^1.1.0",
