--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "chalk": "^4.0.0",
     "instantsearch.js": "^4.23.0",
     "json2yaml": "^1.1.0",
-    "moment": "^2.29.1",
-    "vuepress": "^1.8.2"
+    "moment": "^2.29.1"
   }
 }
