--- a/theme-deeply/package.json
+++ b/theme-deeply/package.json
@@ -3,11 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "scripts": {
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs",
-    "deploy": "./deploy.sh"
-  },
   "devDependencies": {
     "vuepress": "^1.8.2"
   },
@@ -15,8 +10,10 @@
     "@vssue/api-github-v3": "^1.4.7",
     "@vssue/vuepress-plugin-vssue": "^1.4.8",
     "algoliasearch": "^4.9.2",
+    "axios": "^0.21.1",
+    "chalk": "^4.0.0",
     "instantsearch.js": "^4.23.0",
-    "vuepress": "^1.8.2",
-    "json2yaml": "^1.1.0"
+    "json2yaml": "^1.1.0",
+    "moment": "^2.29.1"
   }
 }
